--- a/style.css
+++ b/style.css
@@ -38,3 +38,9 @@ section {
     background-color: grey;
     display: flex;
 }
+
+article {
+    background-color: #999;
+    padding: 20px;
+    margin: 20px;
+}
