--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ article {
 
 .float-image {
     float: left;
-    height: auto;
-    border-radius: 8px; 
+    height: 50px;
+    width: 50px;
+    margin-right: 8px; 
 }
