--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ article {
 }
 
 .float-image {
-    float: right;
+    float: left;
     height: 200px;
     width: 200px;
     margin-right: 8px; 
